# ai-personalization-platform

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  README.md  _master.md  docker-compose.yml  ruff.toml  sonar-project.properties
.claude/: settings.json
.claude/skills/adr/: SKILL.md
.claude/skills/concept-quiz/: SKILL.md
.claude/skills/context-health/: SKILL.md
.claude/skills/incident/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/repo-context-system/: SKILL.md
.claude/skills/schema-check/: SKILL.md
.claude/skills/service-done/: SKILL.md
.claude/skills/ship-pr/: SKILL.md
.claude/skills/start-infra/: SKILL.md
.github/workflows/: check-readme-skills.yml  ci.yml  code-analysis.yml
_templates/: CONTEXT.template.md
docs/: component-diagram.html  component-diagram.md  implementation-plan.md
docs/api/: event-ingestion.openapi.json  inference-api.openapi.json  privacy.openapi.json
docs/decisions/: README.md
docs/decisions/event-ingestion/: 0003-fire-and-forget-kafka-delivery.md  retro-2026-04-18.md
docs/decisions/feature-pipeline/: 0004-flink-state-serialization.md  0004-pickled-byte-array-flink-state.md  0005-at-least-once-checkpointing-kafka-offsets.md  0006-row-type-info-flink-state.md  retro-2026-04-23.md
docs/decisions/inference-api/: 0007-fail-closed-on-privacy-unavailable.md  0010-python-fastapi-over-go-grpc.md  0011-no-parquet-fallback-on-redis-miss.md  0012-in-process-asyncio-lock-model-hotswap.md  retro-2026-05-14.md
docs/decisions/model-training/: 0008-model-agnostic-trainer-abstraction.md  0009-alias-only-model-promotion-gate.md  retro-2026-05-04.md
docs/decisions/privacy/: 0006-audit-log-range-partitioning.md  retro-2026-04-30.md
docs/decisions/shared/: 0001-kraft-single-broker-local-kafka.md  0002-shared-postgres-mlflow-tracking.md  retro-2026-04-12.md
docs/incidents/: README.md
docs/sys-design-concepts/: README.md  event-ingestion.md  feature-pipeline.md  inference-api.md  model-training.md  privacy.md  shared.md  tests.md
infra/: DEPLOYMENT.md
infra/k8s/base/: namespace.yaml  rbac.yaml
infra/k8s/ingress/: ingress.yaml
infra/k8s/kafka/: kafka-cluster.yaml  kafka-topics.yaml  strimzi-values.yaml
infra/k8s/mlflow/: deployment.yaml  service.yaml
infra/k8s/model-training/: cronjob.yaml
infra/k8s/services/event-ingestion/: deployment.yaml  hpa.yaml  service.yaml
infra/k8s/services/feature-pipeline/: flink-deployment.yaml
infra/k8s/services/inference-api/: deployment.yaml  hpa.yaml  service.yaml
infra/k8s/services/privacy/: deployment.yaml  service.yaml
infra/postgres/: init-multiple-dbs.sh
infra/terraform/environments/dev/: backend.tf  main.tf  terraform.tfvars  variables.tf
infra/terraform/environments/prod/: backend.tf  main.tf  terraform.tfvars  variables.tf
infra/terraform/modules/artifact-registry/: main.tf  outputs.tf
infra/terraform/modules/cloud-sql/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gke/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/memorystore/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
scripts/: export-anki.py  new-service.sh  reset-infra.sh  start-infra.sh  sync-master.sh  sync-readme-skills.py  train-model.sh  update-context.sh
services/event-ingestion/: .env.example  CLAUDE.md  CONTEXT.md  Dockerfile  pyproject.toml
services/event-ingestion/app/: config.py  main.py  models.py  producer.py  pseudonymize.py
services/event-ingestion/tests/: test_integration.py  test_models.py  test_pseudonymize.py
services/feature-pipeline/: .dockerignore  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  pyproject.toml
services/feature-pipeline/app/: config.py  features.py  parquet_sink.py  pipeline.py  redis_sink.py  state.py
services/feature-pipeline/tests/: test_features.py  test_integration.py  test_pipeline_logic.py
services/inference-api/: .dockerignore  CLAUDE.md  CONTEXT.md  Dockerfile  pyproject.toml
services/inference-api/app/: catalog.py  config.py  feature_fetcher.py  main.py  model_store.py  privacy_client.py  pseudonymize.py  schemas.py  scorer.py
services/inference-api/app/scorers/: base.py  factory.py  lightgbm.py
services/inference-api/tests/: test_catalog.py  test_feature_fetcher.py  test_main.py  test_privacy_client.py  test_pseudonymize.py  test_scorer.py
services/model-training/: CLAUDE.md  CONTEXT.md  Dockerfile  pyproject.toml
services/model-training/app/: __main__.py  config.py  data_loader.py  feature_engineering.py  train.py  trainer.py
services/model-training/app/trainers/: factory.py  lightgbm.py
services/model-training/scripts/: seed_parquet.py
services/model-training/tests/: test_data_loader.py  test_feature_engineering.py  test_trainer_factory.py
services/privacy/: .env.example  CLAUDE.md  CONTEXT.md  Dockerfile  entrypoint.sh  pyproject.toml
services/privacy/alembic/: env.py
services/privacy/alembic/versions/: 001_initial_schema.py
services/privacy/app/: config.py  database.py  main.py  models.py  partitions.py  schemas.py
services/privacy/app/routers/: audit.py  consent.py  internal.py
services/privacy/tests/: test_integration.py  test_pseudonymize.py  test_schemas.py
tests/: CLAUDE.md  CONTEXT.md  TESTING.md  conftest.py  pyproject.toml
tests/clients/: __init__.py  event_ingestion.py  inference.py  privacy.py  sync_event_ingestion.py  sync_inference.py  sync_privacy.py
tests/helpers/: __init__.py  latency.py  pseudonymize.py  redis_helpers.py
tests/scenarios/: test_cold_start.py  test_consent.py  test_event_propagation.py  test_feature_freshness.py  test_latency.py  test_model_hotswap.py
tests/simulation/: config.py  locustfile.py  results.py  runner.py  shapes.py
tests/simulation/suites/: baseline.yaml  prod_baseline.yaml  soak.yaml  spike.yaml  stress.yaml
