[project]
name = "e2e-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0.8,<6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mlflow>=3.12.0",
]

[project.optional-dependencies]
# Not installed in CI — simulation tests require a live stack and are run manually.
simulation = [
    "locust>=2.31",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
markers = [
    "e2e: requires all services running",
    "slow: wait loops >5s (feature propagation, cold-start shift)",
    "consent: consent revocation and audit log flows",
    "latency: p95/p99 SLO assertions",
    "cold_start: first-visit fallback flows",
    "feature_freshness: Redis key freshness after events",
    "model_hotswap: model hot-swap under concurrent load",
]
