[project]
name = "feature-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.8,<6",
    "pyarrow>=3.0.0",
    "pandas>=1.3.0",
    "pydantic-settings>=2.5.0,<3",
]

# PyFlink is an optional extra — heavy to install (ships bundled JARs) and
# requires Java 11/17/21. Unit tests (test_features.py) run without it.
# Install with: uv sync --extra pipeline
[project.optional-dependencies]
pipeline = ["apache-flink==1.20.3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.26",
    "confluent-kafka>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
feature-pipeline = "app.pipeline:main"
