[project]
name = "feature-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.8,<6",
    "pyarrow>=3.0.0",
    "pandas>=1.3.0",
    "pydantic-settings>=2.5.0,<3",
    "gcsfs>=2024.0",
]

# PyFlink is an optional extra — heavy to install (ships bundled JARs) and
# requires Java 11/17/21. Unit tests (test_features.py) run without it.
# Install with: uv sync --extra pipeline
[project.optional-dependencies]
# setuptools<70 is required at runtime: apache-beam (a transitive PyFlink dep)
# imports pkg_resources at startup, which only ships as a top-level site-packages
# module in setuptools < 70 — newer versions moved it inside the package.
pipeline = ["apache-flink==1.20.3", "setuptools<70"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.26",
    "confluent-kafka>=2.3",
]

# apache-flink-libraries and apache-beam have no ARM64 wheels for these versions
# and must be built from source. They use legacy setup.py builds that require
# setuptools<70 (pkg_resources and _distutils_hack are top-level in that range)
# and wheel. Without these, uv's isolated build environments fail to find them.
[tool.uv.extra-build-dependencies]
apache-beam = ["setuptools<70", "wheel"]
apache-flink-libraries = ["setuptools<70", "wheel"]
crcmod = ["setuptools<70"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
feature-pipeline = "app.pipeline:main"
