[project]
name = "model-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightgbm",
    "mlflow>=2.14.0,<3.0.0",
    "pyarrow",
    "pandas",
    "scikit-learn",
    "pydantic-settings",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
